@@ -5,7 +5,7 @@
 
     <groupId>com.gwtplatform</groupId>
     <artifactId>gwtp-samples</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>1.0-RC-1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>GWT-Platform Samples</name>
     <inceptionYear>2010</inceptionYear>
@@ -60,22 +60,23 @@
         <module>gwtp-sample-tab</module>
         <module>gwtp-sample-crawler-service</module>
         <module>gwtp-sample-mobile</module>
+        <module>gwtp-sample-kitchensink</module>
     </modules>
 
     <properties>
+        <!-- client -->
         <gwt.version>2.5.0</gwt.version>
-        <gwtp.version>0.8-alpha-4-SNAPSHOT</gwtp.version>
+        <gwtp.version>1.0-RC-1</gwtp.version>
         <gin.version>2.0.0</gin.version>
         <gwt.style>OBF</gwt.style>
 
-        <maven-gae-plugin.version>0.9.5</maven-gae-plugin.version>
-        <gae.version>1.7.3</gae.version>
+        <!-- server -->
+        <gae.version>1.7.4</gae.version>
         <guice.version>3.0</guice.version>
         <aopalliance.version>1.0</aopalliance.version>
 
-        <target.jdk>1.6</target.jdk>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <m2e.version>2.9</m2e.version>
+        <!-- maven -->
+        <maven-gae-plugin.version>0.9.5</maven-gae-plugin.version>
         <lifecycle-mapping-plugin.version>1.0.0</lifecycle-mapping-plugin.version>
         <maven.deploy.version>2.7</maven.deploy.version>
         <maven-processor-plugin.version>2.1.0</maven-processor-plugin.version>
@@ -85,8 +86,12 @@
         <maven.compiler.version>2.3.2</maven.compiler.version>
         <maven-source-plugin.version>2.2</maven-source-plugin.version>
 
+        <!-- testing -->
         <junit.version>4.11</junit.version>
         <jukito.version>1.1</jukito.version>
+
+        <target.jdk>1.6</target.jdk>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <gae.home>
@@ -112,26 +117,6 @@
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>${maven.war.version}</version>
-                    <configuration>
-                        <webappDirectory>${webappDirectory}</webappDirectory>
-                        <webResources>
-                            <resource>
-                                <directory>src/main/webapp/WEB-INF</directory>
-                                <filtering>true</filtering>
-                                <includes>
-                                    <include>appengine-web.xml</include>
-                                </includes>
-
-                                <targetPath>WEB-INF</targetPath>
-                            </resource>
-                        </webResources>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surfire.version}</version>
                     <configuration>
@@ -149,8 +134,7 @@
                 <!-- 'mvn gwt:debug' - runs debug mode -->
                 <!-- 'mvn gwt:compile' - compiles gwt -->
                 <!-- 'mvn integration-test' - runs the gwt tests (*GwtTest.java) -->
-                <!-- 'mvn clean gwt:compile deploy -DskipTests' - deploys 
-                    to gae & sona with out running tests -->
+                <!-- 'mvn clean gwt:compile deploy -DskipTests' - deploys to gae & sona with out running tests -->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>gwt-maven-plugin</artifactId>
@@ -162,7 +146,7 @@
                         <includes>**/*GwtTest.java</includes>
                         <mode>htmlunit</mode>
 
-                        <extraJvmArgs>-Xss1024k -Xmx512M</extraJvmArgs>
+                        <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=256m</extraJvmArgs>
                         <logLevel>INFO</logLevel>
                         <style>${gwt.style}</style>
 
@@ -177,18 +161,11 @@
                     <executions>
                         <execution>
                             <goals>
-                                <goal>compile</goal>
                                 <goal>test</goal>
+                                <goal>compile</goal>
                             </goals>
                         </execution>
                     </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.google.gwt</groupId>
-                            <artifactId>gwt-codeserver</artifactId>
-                            <version>${gwt.version}</version>
-                        </dependency>
-                    </dependencies>
                 </plugin>
 
                 <plugin>
@@ -202,19 +179,24 @@
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>${maven-source-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <id>attach-sources</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>jar-no-fork</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven.war.version}</version>
+                    <configuration>
+                        <webappDirectory>${webappDirectory}</webappDirectory>
+                        <webResources>
+                            <resource>
+                                <directory>src/main/webapp/WEB-INF</directory>
+                                <filtering>true</filtering>
+                                <includes>
+                                    <include>appengine-web.xml</include>
+                                </includes>
+                                <targetPath>WEB-INF</targetPath>
+                            </resource>
+                        </webResources>
+                    </configuration>
                 </plugin>
 
+                <!-- Skip deploy -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
@@ -224,22 +206,32 @@
                     </configuration>
                 </plugin>
 
+                <!-- App Engine -->
                 <plugin>
                     <groupId>net.kindleit</groupId>
-                    <version>${maven-gae-plugin.version}</version>
                     <artifactId>maven-gae-plugin</artifactId>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.7</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>${maven-gae-plugin.version}</version>
+                    <configuration>
+                        <!-- Add credentials to ~/.m2/settings.xml <id>appengine-credentials</id> -->
+                        <serverId>appengine-credentials</serverId>
+                        <splitJars>true</splitJars>
+                        <sdkDir>${gae.home}</sdkDir>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>install-server-jar</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>unpack</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>deploy</id>
+                            <goals>
+                                <goal>deploy</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
 
                 <plugin>
@@ -265,8 +257,8 @@
                     </dependencies>
                 </plugin>
 
-                <!--This plugin's configuration is used to store Eclipse 
-                    m2e settings only. It has no influence on the Maven build itself. -->
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven 
+                    build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -334,31 +326,6 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <!-- Build to local directory, so we can use mvn clean deploy to deploy 
-        all samples to App Engine -->
-    <distributionManagement>
-        <repository>
-            <id>local-target-distribution</id>
-            <url>file://./target/distribution/release</url>
-        </repository>
-        <snapshotRepository>
-            <id>local-target-distribution</id>
-            <url>file://./target/distribution/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <repositories>
-        <!-- Use GWTP snapshots for the latest and greatest -->
-        <repository>
-            <id>sonatype.snapshots</id>
-            <name>Sonatype snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <dependencyManagement>
         <dependencies>
